[tool.poetry]
authors     = ["Taras Ivashchuk <taras@tarasivashchuk.com>"]
description = "Algorithmic trading using deep learning"
name        = "marketml"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "*"
logzero = "*"
pendulum = "*"
tqdm = "*"
plotly = "*"
pandas = "*"
pandas_datareader = "*"
tensorflow = "*"
yahoo_fin = "*"
backtrader = "*"
scikit-learn = "^0.23.1"
u8darts = "^0.2.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = {version="*", allow-prereleases=true}
isort = "*"
pytest = "*"
flake8 = "*"

[tool.black]
line-length = 100

[build-system]
build-backend = "poetry.masonry.api"
requires      = ["poetry>=0.12"]
